# PubChemCompounds

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  pyproject.toml  sdffrompubchem_temp_0.sdf  setup.py  sphinx_out.txt
.github/workflows/: ci.yml
docs/: Makefile  make.bat  requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  examples.rst  index.rst  installation.rst
pubchem/: __init__.py  pubchem.py  throttle.py
pubchem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pubchem_compounds/: __init__.py  pubchem_compounds.py  throttle.py
pubchem_compounds.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_pubchem.py
